--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         </li>
                         <li>
                             <strong>Born in:</strong>
-                            <span>1993, Gothenburg</span>
+                            <span>Gothenburg</span>
                         </li>
                         <li>
                             <strong>Title:</strong>
@@ -206,7 +206,7 @@
             </div>
             <div class="certificate-list">
                 <div class="img-wrapper">
-                <img src="images/Icon_Certificate.png" alt="Certificate">
+                <img src="images/Icon_HonorAward.png" alt="Award">
                 </div>
                 <h5>Certificate.</h5>
                 <ul class="info-list">
